--- a/JsonAnalyzer/JsonAnalyzer.Test/JsonAnalyzer.Test.csproj
+++ b/JsonAnalyzer/JsonAnalyzer.Test/JsonAnalyzer.Test.csproj
@@ -27,16 +27,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="CodeForTests\AfterFix.txt">
+    <None Update="CodeForTests\AfterFix_Should_Be_Zero_Change.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="CodeForTests\ShouldBe_One_Analyze.txt">
+    <None Update="CodeForTests\AfterFix_Should_Be_One_Change.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="CodeForTests\BeforeFix.txt">
+    <None Update="CodeForTests\BeforeFix_Should_Be_Zero_Change.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="CodeForTests\ShouldBe_Zero_Analyze.txt">
+    <None Update="CodeForTests\Should_Be_One_Analyze_Hit.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="CodeForTests\BeforeFix_Should_Be_One_Change.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="CodeForTests\Should_Be_Zero_Analyze_hit.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
